<resources>
    <string name="app_name">ChitChat</string>

    <string name="create_account_capital">CREATE ACCOUNT</string>
    <string name="sign_in_capital">SIGN IN</string>
    <string name="sign_in">Sign In</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="network_not_connected">Network not connected</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="create_account">Create Account</string>
    <string name="full_name">Full Name</string>
    <string name="chat">Chat</string>
    <string name="menu">Menu</string>
    <string name="contact">Contact</string>
    <string name="group">Group</string>
    <string name="what_are_you_searching_for">What are you searching for?</string>
    <string name="search">Search</string>
    <string name="invalid_email_password">Please provide a valid phone number and password.</string>
    <string name="username">Username</string>
    <string name="profile">Profile</string>
    <string name="friend_requests">Friend Requests</string>
    <string name="notifications">Notifications</string>
    <string name="sign_out">Sign Out</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="phone_number">Phone Number</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="bio">Bio</string>
    <string name="account">Account</string>
    <string name="setting">Setting</string>
    <string name="gender">Gender</string>
    <string name="full_name_is_empty">Full name is empty</string>
    <string name="phone_number_is_empty">Phone number is empty</string>
    <string name="invalid_phone_number">Phone number is invalid</string>
    <string name="password_is_empty">Password is empty</string>
    <string name="save">Save</string>
    <string name="information">Information</string>
    <string name="change_password">Change Password</string>
    <string name="change_username">Change Username</string>
    <string name="update_information">Update Information</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="unknown">Unknown</string>
    <string name="_public">Public</string>
    <string name="friends">Friends</string>
    <string name="only_me">Only me</string>
    <string name="avatar">Avatar</string>
    <string name="background">Background</string>
    <string name="done">Done</string>
    <string name="digits">ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz1234567890.</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="retype_password">Retype Password</string>
    <string name="retype_password_fail">Retype password is incorrect</string>
</resources>
