<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/btnPublic"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:gravity="center"
        android:text="@string/_public"
        android:background="@drawable/bg_btn"
        android:textColor="@color/textColor"
        android:textSize="@dimen/_12sdp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/textColorLight" />

    <TextView
        android:id="@+id/btnFriends"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:gravity="center"
        android:text="@string/friends"
        android:background="@drawable/bg_btn"
        android:textColor="@color/textColor"
        android:textSize="@dimen/_12sdp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/textColorLight" />

    <TextView
        android:id="@+id/btnOnlyMe"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:gravity="center"
        android:text="@string/only_me"
        android:background="@drawable/bg_btn"
        android:textColor="@color/textColor"
        android:textSize="@dimen/_12sdp" />

</LinearLayout>
