<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="viewModel"
            type="tech.leson.chitchat.ui.register.RegisterViewModel" />
    </data>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/backgroundColor">

            <com.google.android.material.card.MaterialCardView
                style="@style/CustomCardViewStyle"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginBottom="@dimen/_20sdp"
                android:transitionName="transitionCard"
                app:cardBackgroundColor="@color/backgroundColor"
                app:cardElevation="@dimen/_5sdp"
                app:cardUseCompatPadding="false"
                app:layout_constraintBottom_toTopOf="@id/btnSignIn"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/sf_pro_display_bold"
                        android:text="@string/create_account"
                        android:textColor="@color/green"
                        android:textSize="@dimen/_24ssp"
                        app:layout_constraintBottom_toTopOf="@id/edtFullName"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <EditText
                        android:id="@+id/edtFullName"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_48sdp"
                        android:layout_margin="@dimen/_10sdp"
                        android:background="@drawable/bg_edt_input"
                        android:drawableStart="@drawable/ic_user"
                        android:drawablePadding="@dimen/_10sdp"
                        android:fontFamily="@font/sf_pro_display_regular"
                        android:hint="@string/full_name"
                        android:imeOptions="actionNext"
                        android:inputType="textCapWords"
                        android:paddingStart="@dimen/_10sdp"
                        android:paddingLeft="@dimen/_10sdp"
                        android:paddingEnd="@dimen/_10sdp"
                        android:paddingRight="@dimen/_10sdp"
                        android:textColor="@color/textColor"
                        android:textColorHint="@color/textColorLight"
                        app:layout_constraintBottom_toTopOf="@id/edtPhoneNumber"
                        app:layout_constraintStart_toStartOf="parent"
                        tools:ignore="Autofill" />

                    <EditText
                        android:id="@+id/edtPhoneNumber"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_48sdp"
                        android:layout_margin="@dimen/_10sdp"
                        android:background="@drawable/bg_edt_input"
                        android:drawableStart="@drawable/ic_phone"
                        android:drawablePadding="@dimen/_10sdp"
                        android:fontFamily="@font/sf_pro_display_regular"
                        android:hint="@string/phone_number"
                        android:imeOptions="actionNext"
                        android:inputType="phone"
                        android:paddingStart="@dimen/_10sdp"
                        android:paddingLeft="@dimen/_10sdp"
                        android:paddingEnd="@dimen/_10sdp"
                        android:paddingRight="@dimen/_10sdp"
                        android:textColor="@color/textColor"
                        android:textColorHint="@color/textColorLight"
                        android:transitionName="transitionEmail"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:ignore="Autofill" />

                    <EditText
                        android:id="@+id/edtPassword"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_48sdp"
                        android:layout_margin="@dimen/_10sdp"
                        android:background="@drawable/bg_edt_input"
                        android:drawableStart="@drawable/ic_password"
                        android:drawablePadding="@dimen/_10sdp"
                        android:fontFamily="@font/sf_pro_display_regular"
                        android:hint="@string/password"
                        android:imeOptions="actionDone"
                        android:inputType="textPassword"
                        android:paddingStart="@dimen/_10sdp"
                        android:paddingLeft="@dimen/_10sdp"
                        android:paddingEnd="@dimen/_10sdp"
                        android:paddingRight="@dimen/_10sdp"
                        android:textColor="@color/textColor"
                        android:textColorHint="@color/textColorLight"
                        android:transitionName="transitionPassword"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/edtPhoneNumber"
                        tools:ignore="Autofill" />

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:id="@+id/btnCreateAccount"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_48sdp"
                        android:layout_marginStart="@dimen/_15sdp"
                        android:layout_marginEnd="@dimen/_15sdp"
                        android:layout_marginBottom="@dimen/_20sdp"
                        android:background="@drawable/bg_btn_corner"
                        android:orientation="horizontal"
                        android:elevation="@dimen/_10sdp"
                        android:onClick="@{(View) -> viewModel.onClick(View)}"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent">

                        <ImageView
                            android:id="@+id/imvBtnCrAccount"
                            android:layout_width="@dimen/_10sdp"
                            android:layout_height="@dimen/_10sdp"
                            android:layout_marginEnd="@dimen/_5sdp"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toStartOf="@+id/tvBtnCrAccount"
                            app:layout_constraintTop_toTopOf="parent"
                            app:srcCompat="@drawable/ic_btn_confirm"
                            tools:ignore="ContentDescription" />

                        <TextView
                            android:id="@+id/tvBtnCrAccount"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:fontFamily="@font/sf_pro_display_bold"
                            android:text="@string/create_account_capital"
                            android:textColor="@color/white"
                            android:textSize="@dimen/_14ssp"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                    </androidx.constraintlayout.widget.ConstraintLayout>

                </androidx.constraintlayout.widget.ConstraintLayout>

            </com.google.android.material.card.MaterialCardView>

            <TextView
                android:id="@+id/btnSignIn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_20sdp"
                android:fontFamily="@font/sf_pro_display_medium"
                android:onClick="@{(View) -> viewModel.onClick(View)}"
                android:text="@string/sign_in_capital"
                android:textColor="@color/textColorLight"
                android:textSize="@dimen/_12ssp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/loading"
            android:visibility="@{viewModel.isLoading ? View.VISIBLE : View.GONE}">

            <androidx.core.widget.ContentLoadingProgressBar
                android:id="@+id/address_looking_up"
                style="?android:attr/progressBarStyleLarge"
                android:indeterminateDrawable="@drawable/custom_progressbar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center" />
        </FrameLayout>

    </FrameLayout>

</layout>
